@@ -390,6 +390,7 @@ extern WandExport MagickWand
   *MagickPreviewImages(MagickWand *wand,const PreviewType),
   *MagickSimilarityImage(MagickWand *,const MagickWand *,RectangleInfo *,
     double *),
+  *MagickSmushImages(MagickWand *,const MagickBooleanType,const ssize_t),
   *MagickSteganoImage(MagickWand *,const MagickWand *,const ssize_t),
   *MagickStereoImage(MagickWand *,const MagickWand *),
   *MagickTextureImage(MagickWand *,const MagickWand *),
